# ZeroTrustArcheitecture

./: DEMO.md  LICENSE  README.md  main.py  pyproject.toml  sentinelcommand.db
core/: __init__.py  audit.py  auth.py  config.py  database.py  events.py  metrics.py  models.py
modules/backup_verify/: __init__.py  cli.py  engine.py  routes.py  schemas.py
modules/firewall/: __init__.py  cli.py  engine.py  routes.py  schemas.py
modules/killswitch/: __init__.py  cli.py  engine.py  routes.py  schemas.py
modules/session_revoke/: __init__.py  cli.py  engine.py  routes.py  schemas.py
modules/simulation/: __init__.py  engine.py  routes.py  scenarios.py  schemas.py  scoring.py
modules/soar/: __init__.py  connectors.py  engine.py  routes.py  schemas.py
modules/soar/playbooks/: ransomware_containment.yaml
modules/syslog_monitor/: __init__.py  engine.py  routes.py  schemas.py
modules/uba_anomaly/: __init__.py  baseline.py  cli.py  engine.py  routes.py  schemas.py
modules/uba_production/: __init__.py  engine.py  routes.py  rules.py  schemas.py  stream.py
