[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentinelcommand"
version = "1.0.0"
description = "SentinelCommand — Unified Cybersecurity Operations Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SentinelCommand Team"}
]
keywords = ["cybersecurity", "SOAR", "incident-response", "SIEM", "zero-trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.0"]
kafka = ["aiokafka>=0.10.0"]
azure = ["azure-identity>=1.15.0", "azure-monitor-query>=1.2.0", "msgraph-sdk>=1.2.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "coverage>=7.4.0",
    "ruff>=0.2.0",
]

[project.scripts]
sentinelcommand = "sentinelcommand.cli:main"

[tool.setuptools.packages.find]
include = ["sentinelcommand*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
